fixed table popover alignment

--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -14,3 +14,7 @@ tbody > tr:hover {
     cursor: pointer;
     background-color: var(--hover-color);
 }
+.MuiPopover-paper {
+    top: 86px !important;
+    left: 525px !important;
+}
